--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 <div class="flex flex-col sm:flex-row gap-4 mt-4">
 <button class="flex min-w-[160px] cursor-pointer items-center justify-between h-12 px-6 bg-action-blue text-white text-sm font-medium leading-normal hover:bg-[#0043ce] transition-all">
-<span class="truncate"><a href="./portfolio.html">View Portfolio</a></span>
+<span class="truncate"><a href="./pages/portfolio.html">View Portfolio</a></span>
 <span class="material-symbols-outlined text-sm ml-2">arrow_forward</span>
 </button>
 <button class="flex min-w-[160px] cursor-pointer items-center justify-between h-12 px-6 bg-transparent border border-white text-white text-sm font-medium leading-normal hover:bg-white hover:text-corporate-blue transition-all">
