--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -50,7 +50,7 @@
 <div class="relative flex min-h-screen w-full flex-col bg-white overflow-x-hidden">
 <div class="sticky top-0 z-50 flex items-center bg-white/95 backdrop-blur-md px-6 py-4 justify-between border-b border-gray-100">
 <div class="text-corp-blue flex size-10 shrink-0 items-center justify-start">
-<span class="material-symbols-outlined text-[28px]"><a href="./mipagina.html">terminal</a></span>
+<span class="material-symbols-outlined text-[28px]"><a href="../index.html">terminal</a></span>
 </div>
 <div class="flex flex-col items-center">
 <h2 class="text-corp-dark text-sm font-bold tracking-widest uppercase font-mono">Portfolio de Germán</h2>
